--- a/opdracht 1/LP/index.html
+++ b/opdracht 1/LP/index.html
@@ -34,28 +34,28 @@
     </nav>
     <main>
         <figure class="bigFigure">
-            <img src="img/pexels-bagus-pangestu-1440476.jpg" alt="een sakura tree with a japanes house">
+            <img src="img/JapanMain.webp" alt="een sakura tree with a japanes house">
         </figure>
         <section class="collections">
             <h2 class="collectionsTitle">Collections</h2>
             <ul class="collectionsList">
                 <li class="collectionsListItem">
-                    <img src="img/new.jpg" alt="een japans gebouw tijdens oud en nieuw">
+                    <img src="img/Japan1.webp" alt="een japans gebouw tijdens oud en nieuw">
                 </li>
                 <li class="collectionsListItem">
-                    <img src="img/DSC_0190.jpg" alt="is een set japanse zwaarte ook wel katan's genoemt">
+                    <img src="img/Sword.webp" alt="is een set japanse zwaarte ook wel katan's genoemt">
                 </li>
                 <li class="collectionsListItem">
-                    <img src="img/samurai.jpg" alt="een panser van de samurai draagt vroegen">
+                    <img src="img/Armor.webp" alt="een panser van de samurai draagt vroegen">
                 </li>
                 <li class="collectionsListItem">
-                    <img src="img/oni.jpg" alt="een masker van een japanse demon">
+                    <img src="img/Oni.webp" alt="een masker van een japanse demon">
                 </li>
                 <li class="collectionsListItem">
-                    <img src="img/dragon.jpg" alt="de draag van dragon ball">
+                    <img src="img/Dragon.webp" alt="de draag van dragon ball">
                 </li>
                 <li class="collectionsListItem">
-                    <img src="img/nice.jpg" alt="een mooi uitzich van japan">
+                    <img src="img/Japan2.webp" alt="een mooi uitzich van japan">
                 </li>
             </ul>
         </section>
@@ -116,7 +116,7 @@
                 snel mogelijk antoord kunnen geven</p>
 
         </section>
-        <section>
+        <section class="sectionA">
             <form>
                 <div>
 
@@ -135,7 +135,6 @@
                 <input class="submit" type="submit" value="verzenden">
 
             </form>
-
         </section>
     </main>
     <footer class="footer">
